@@ -13,6 +13,9 @@
 [Generic / SYNOPSIS]
 [Generic / DESCRIPTION]
 
+[Collect / ATTRIBUTES]
+command = attr
+
 [Collect / METHODS]
 command = method
 
